Responsive ultimos detalles

--- a/scss/base/_mapas.scss
+++ b/scss/base/_mapas.scss
@@ -2,7 +2,7 @@
 
 $footer: (
     bg-footer: rgb(253, 179, 136),
-    height-footer: 20vh,
+    height-footer: 100%,
     padding-top-footer: 1vh,
     marging-left-footer: 10%,
     padding-lista-footer: 1vh 2vw,
@@ -16,7 +16,7 @@ $footer: (
 $copyright: (
     padding-left-copy: 50% ,
     color-copy: black,
-    font-size-copy: small,
+    font-size-copy: 12px,
     font-style-copy: italic,
     font-family-copy: Arial ,
 
