--- a/scss/base/_mixin.scss
+++ b/scss/base/_mixin.scss
@@ -1,11 +1,11 @@
 
 
 
-    @mixin small {
+    /*@mixin small {
         @media screen and (max-width: 576px) {
           //margin-right: 50%;
           font-size: 12px;
           color: red;
           font-family: "montserrat";
     
-}}
+}}*/
