--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,49 +1,91 @@
 @import '../base/variables';
 @import '../base/mixin';
+@import '../breakpoints/breakpoints';
 
 
 .encabezado {
     background-color: $bg-color-encabezado;
     width: 100%;
-    height: 15vh;
+    //height: 20vh;
+    height: 100%;
     text-align: center;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    //position: absolute;
+    @include small {
+        display: flex;
+        flex-direction: column;
+        
+        
+    }
 
-    
+    @include Medium {
+        display: flex;
+        flex-direction: column;
+        
+    }
+
 
     .logo {
-       // display: inline-block;
+       
         display: flex;
         align-items: center;
         justify-content: center;
+        
+        
     
         .encabezadoLogo {
         width: 180px;
-        margin-left: 40px;
+        margin: 10px;
+        
+        @include small {
+        
+            width: 120px;
+
+        }
+
+        @include Medium {
+            width: 120px;
+        }
+
+        @include Large {
+            width: 140px;
+        }
         
     }    
 }
         nav {
         display: flex;
-        
         align-items: center;
-       
+        justify-content: center;
+            
 
             ul {
                 display: flex;
                 flex-direction: row;
                 
                 li {
-                
-                
-                padding: 0.5vh 3vw;
+            
+                padding: 3vh 3.5vw;
+                justify-content: center;
+
                     a{
                     color: black;
                     font-size: $font-size-nav;
                     font-family: 'Montserrat', sans-serif ;
-                    @include small;
+                    @include small{
+                        font-size: 12px;
+                    
+                    }
+
+                    @include Medium {
+                        font-size: 15px;
+                    }
+
+                    @include Large {
+                        font-size: 15px;
+                    }
 
                     }
 
@@ -54,3 +96,12 @@
 }
 
 
+
+  /*  @media (max-width: 450px) {
+        .encabezado {
+            background-color: red;
+          
+            
+        
+        }
+    } */
