--- a/scss/components/_portadaInicio.scss
+++ b/scss/components/_portadaInicio.scss
@@ -3,25 +3,77 @@
 .portadaInicio {
     background-color: white;
     width: 100%;
-    height: 75vh;
-   // margin: 0 auto;
+    height: 100%;
+   
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
+    @include small{
+        height: 100%;
+    }
+
+    @include Medium {
+        height: 100%;
+    }
+
+    @include Large {
+        height: 100%;
+    }
+
+    @include ExtraLarge {
+        height: 100%;
+    }
+
     main {
         display: grid;
-        grid-template-columns: 1fr 1fr;     
+        grid-template-columns: 1fr 1fr;
+
+        @include small {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 0.8fr ;
+        }
+
+        @include Medium {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 0.8fr ;
+        }
+
+
+        @include Large {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 0.8fr ;
+        }
+        
+        @include ExtraLarge {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 0.8fr ;
+        }
         
         div {
             display: inline-block;
-           // margin: 0 auto;
 
-           /* img {
-                width: 1000px;
-                height: 100%;
-            }*/
+            @include small {
+                margin-bottom: 20px;
+            }
+
+            @include Medium {
+                margin-bottom: 20px;
+            }
+
+            @include Large {
+                margin-bottom: 10px;
+            }
+
+            @include ExtraLarge {
+                margin-bottom: 10px;
+            }
+           
 
             h1 {
             color: rgb(43, 197, 197);
@@ -34,6 +86,16 @@
                     color: $bg-color-encabezado;
                     font-family: 'Montserrat', sans-serif;
                     font-size: 40px;
+
+                    
+                    @include small {
+                        padding: 10px;
+                        font-size: 30px;
+                    }
+
+                    @include Medium {
+                        font-size: 35px;
+                    }
                 }
 
             }
@@ -43,16 +105,50 @@
             padding: 3vh 5vw;
             color: black;
             font-size: 25px;
-            font-family: 'Montserrat', sans-serif;  
+            font-family: 'Montserrat', sans-serif; 
+
+            @include small {
+                padding: 10px;
+                margin: 0 20px;
+                font-size: 18px;
+            }
+
+            @include Medium {
+                font-size: 20px;
+            }
+            
+            @include ExtraExtraLarge {
+                font-size: 22px;
+            }
 
             }
         }
 
         .fondoPortada {
-            background-image: url(./../assets/img/consultorio05.jpg);
-            height: 75vh;
-            background-size: cover;
-            background-position: center;
+            
+            
+            //height: 75vh;
+            height: 100%;
+            
+
+            @include small {
+                height: 65vh;
+            }
+
+            @include Medium {
+                height: 70vh;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                
+
+            }
+
+            
+
         }
     }
 
