--- a/scss/components/_portadaPages.scss
+++ b/scss/components/_portadaPages.scss
@@ -19,18 +19,60 @@
         align-items: center;
         justify-content: center;
         background-color: rgba(grey, $alpha: 0.5);
-        width: 70vw;
+        width: 90vw;
         height: 60vh;
         font-family: $font-family;
+
+       
+
         
         h1 {
         color: white;
         font-size: 100px;
         margin: 20px 0 ;
+
+        @include small {
+            font-size: 35px;
+            margin: 10px auto;
+
+        }
+
+        @include Medium {
+            font-size: 50px;
+            margin: 10px auto;
+
+        }
+
+        @include Large {
+            font-size: 70px;
+            margin: 15px auto;
+
+        }
+
+        @include ExtraLarge {
+            font-size: 90px;
+            margin: 15px auto;
+
+        }
+
+        
+        
+
         }
         h2 {
             font-size: 20px;
             margin: 20px 0 ;
+
+            @include small {
+                font-size: 15px;
+    
+            }
+
+            @include Medium {
+                font-size: 15px;
+    
+            }
+
         }
 
     }
@@ -54,7 +96,7 @@
         align-items: center;
         justify-content: center;
         background-color: rgba(grey, $alpha: 0.5);
-        width: 70vw;
+        width: 90vw;
         height: 60vh;
         font-family: $font-family;
         
@@ -62,10 +104,47 @@
         color: white;
         font-size: 100px;
         margin: 20px 0 ;
+        
+
+        @include small {
+            font-size: 35px;
+            margin: 10px auto;
+
         }
+
+        @include Medium {
+            font-size: 50px;
+            margin: 10px auto;
+
+        }
+
+        @include Large {
+            font-size: 70px;
+            margin: 15px auto;
+
+        }
+
+        @include ExtraLarge {
+            font-size: 90px;
+            margin: 15px auto;
+
+        }
+        }
+
         h2 {
             font-size: 20px;
             margin: 20px 0 ;
+            text-align: center;
+
+            @include small {
+                font-size: 15px;
+    
+            }
+
+            @include Medium {
+                font-size: 15px;
+    
+            }
         }
 
     }
@@ -74,12 +153,79 @@
 
 
 .portadaFaq {
-    .portadaFaqDos {
-        height: 80vh;
-    }
+    background-image: url(./../assets/img/carrusel-faq-03.jpg);
+    height: 75vh;
+    background-size: cover;
+    background-position: center;
 
-   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     
+
+    .tituloPortada {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: rgba(grey, $alpha: 0.5);
+        width: 90vw;
+        height: 60vh;
+        font-family: $font-family;
+        
+        h1 {
+        color: white;
+        font-size: 100px;
+        margin: 20px 0 ;
+
+        @include small {
+            font-size: 35px;
+            margin: 10px auto;
+
+        }
+
+        @include Medium {
+            font-size: 40px;
+            margin: 10px auto;
+
+        }
+
+        @include Large {
+            font-size: 60px;
+            margin: 15px auto;
+
+        }
+
+        @include ExtraLarge {
+            font-size: 80px;
+            margin: 15px auto;
+
+        }
+
+        @include ExtraExtraLarge {
+            font-size: 80px;
+            margin: 15px auto;
+
+        }
+
+        }
+        h2 {
+            font-size: 20px;
+            margin: 20px 0 ;
+
+            @include small {
+                font-size: 15px;
+    
+            }
+
+            @include Medium {
+                font-size: 15px;
+    
+            }
+        }
+
+    }
 }
 
 
@@ -104,7 +250,7 @@
         align-items: center;
         justify-content: center;
         background-color: rgba(grey, $alpha: 0.5);
-        width: 70vw;
+        width: 90vw;
         height: 60vh;
         font-family: $font-family;
         
@@ -112,10 +258,44 @@
         color: white;
         font-size: 100px;
         margin: 20px 0 ;
+
+        @include small {
+            font-size: 35px;
+            margin: 10px auto;
+
+        }
+
+        @include Medium {
+            font-size: 50px;
+            margin: 10px auto;
+
+        }
+
+        @include Large {
+            font-size: 70px;
+            margin: 15px auto;
+
+        }
+
+        @include ExtraLarge {
+            font-size: 90px;
+            margin: 15px auto;
+
+        }
         }
         h2 {
             font-size: 20px;
             margin: 20px 0 ;
+
+            @include small {
+                font-size: 15px;
+    
+            }
+
+            @include Medium {
+                font-size: 15px;
+    
+            }
         }
 
     }
