--- a/scss/components/_seccionDosContacto.scss
+++ b/scss/components/_seccionDosContacto.scss
@@ -4,13 +4,35 @@
 
     background-color: $bg-color-seccion2;
     text-align: center;
-    height: 85vh;
+    height: 100%;
+    justify-content: center;
+    
     
 
     
 
     div {
+       display: flex;
+       align-items: center;
+
+       @include small {
         display: flex;
+        flex-direction: column;
+        justify-content: center;
+       }
+
+       @include Medium {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+       }
+
+       @include Large {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+       }
+        
         
     }
     .infoHorario{
@@ -20,7 +42,7 @@
         justify-content: center;
 
         h2 { 
-            padding: 20px 0 ;
+            padding: 28px 0 ;
             color: white;
             font-size:$font-size-titulo;
             font-family: $font-family;
@@ -29,11 +51,13 @@
         
         p {
         color: black;
-        font-size: 28px;
+        font-size: 20px;
         //margin-top: 20px;
         padding: 4vh 10vw;
         font-family: $font-family;
         text-align: justify;
+
+        
         
 
     }
@@ -47,17 +71,81 @@
         //justify-content: center;
         align-items: center;
 
-        width: 70vw;
-        height: 75vh;
+        width: 50vw;
+        //height: 70vh;
+        height: 100%;
         margin: 50px 100px 30px 0;
         //margin-right: 80px;
+
+        @include small {
+            display: flex;
+            flex-direction: column;
+            
+
+            width: 50vw;
+            //height: 58vh;
+            margin: 20px 0 20px;
+                
+             
+            
+           }
+
+        @include Medium {
+            display: grid;
+            grid-template-columns:repeat(2,1fr) ;
+            align-items: center;
+            justify-content: center;
+            width: 90vw;
+            //height: 30vh;
+            margin: 50px;
+             
+            
+           }
+
+        @include Large {
+            display: grid;
+            grid-template-columns:repeat(2,1fr) ;
+            align-items: center;
+            justify-content: center;
+            width: 90vw;
+            //height: 30vh;
+            margin: 50px;
+             
+            
+           }
         
+        div {
+            justify-content: center;
         img {
             width: 220px;
+            
             padding: 20px 30px;
 
-            
+            @include small {
+                width: 180px;
+                padding: 0 20px 20px ;
+               
+            }
+
+            @include Medium {
+                width: 180px;
+                padding-left: 60px;
+               
+            }
+
+            @include Large {
+                padding-left: 80px;
+               
+            }
+
+        } 
         }
+
+
+        div {
+            display: flex;
+            flex-direction: column;
+            
 
         h3 {
             background-color: darken($bg-color-seccion2, 13% );
@@ -66,18 +154,55 @@
             font-size: 25px;
             font-family: $font-family;
 
+            @include small {
+                font-size: 18px;
+                //margin-top: 10px;
+               
+            }
+
+            @include Medium {
+                font-size: 18px;
+                margin-top: 10px;
+               
+            }
+
+            @include Large {
+                font-size: 21px;
+                margin-top: 10px;
+               
+            }
+
         }
 
         p {
         color: black;
         font-size: 22px;
         margin-top: 30px;
-        padding: 2vh 4vw;
+        padding: 2vh 2vw;
         font-family: $font-family;
         text-align: justify;
 
+        @include small {
+            
+            font-size: 16px;
+           
         }
 
+        @include Medium {
+            padding-right: 40px;
+            //padding-bottom: 20px;
+            font-size: 16px;
+           
+        }
+
+        @include Large {
+            padding-right: 80px;
+            font-size: 18px;
+           
+        }
+
+        }
+    }
 
     }
 
