--- a/scss/components/_seccionDosFaq.scss
+++ b/scss/components/_seccionDosFaq.scss
@@ -2,7 +2,7 @@
 
 .seccionDosFaq {
     background-color: $bg-color-seccion2;
-    height: 80vh;
+    height: 100%;
     display: flex;
     text-align: center;
     justify-content: center;
@@ -14,30 +14,70 @@
     text-align: center;
     justify-content: center;
     margin: 20px 20px;
+
     li {
-        //display: flex;
-        //margin: 20px auto;
+        
 
         h2 {
             background-color:rgb(250, 166, 117);    
             color: white;
-            text-align: left;
-            
-            padding-left: 50% ;
+            text-align: right;
+            padding-right: 10% ;
             margin: 10px 40px;
             font-size: $font-size-sub-titulo;
             font-family: $font-family;
+
+            @include small {
+                text-align: center;
+                padding: 0;
+                font-size: 22px;
+            }
+
+            @include Medium {
+                text-align: center;
+                padding: 0;
+                font-size: 20px;
+            }
+
+            @include Large {
+                font-size: 22px;
+            }
+
+            @include ExtraLarge {
+                font-size: 28px;
+                padding-left: 30%;
+            }
 
         }
 
         div {
             display: flex;
+            justify-content: space-evenly;
+
+            @include small {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            @include Medium {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
             
 
             img {
                 width: 180px;
                 margin: 20px 50px;
-                
+
+                @include Medium {
+                    width: 220px;
+                }
+
+                @include Large {
+                    width: 160px;
+                }
             }
 
         
@@ -45,11 +85,34 @@
             p {
             
             width: 60%;
-            margin: 50px 200px 0 ;
+            margin: 50px 0 20px;
             color: black;
             font-size: 25px;
             font-family: $font-family;
             text-align: justify;
+
+            @include small {
+                font-size: 18px;
+                width: 70%;
+                margin: 10px;
+                margin-bottom: 40px;
+               
+            }
+
+            @include Medium {
+                font-size: 20px;
+                width: 70%;
+                margin: 20px 0 20px;
+
+            }
+
+            @include Large {
+                font-size: 20px;
+            }
+
+            @include ExtraLarge {
+                font-size: 22px;
+            }
 
             }
     }
