--- a/scss/components/_seccionDosInicio.scss
+++ b/scss/components/_seccionDosInicio.scss
@@ -4,12 +4,13 @@
 
     background-color: $bg-color-seccion2;
     text-align: center;
+    align-items: center;
 
     h2 {
     padding: 3vh 3vw ;
     color: rgb(255, 154, 95);
-    font-size:xx-large;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size:$font-size-titulo;
+    
 
         a {
             color: white;
@@ -22,24 +23,84 @@
     
     ul {
     margin: 0 auto;
+    display: grid;
+    grid-template-columns:repeat(3,1fr) ;
+    grid-auto-rows: 450px;
+    gap: 30px;
+    align-items: center;
+
+    @include small {
+        
+        display: grid;
+        grid-template-columns:1fr;
+        grid-auto-rows: 450px;
+        gap: 30px;
+        }
+
+    @include Medium {
+        
+        display: grid;
+        grid-template-columns:1fr;
+        grid-auto-rows: 450px;
+        gap: 30px;
+        }
+
+    @include Large {
+        
+        display: grid;
+        grid-template-columns:repeat(2,1fr) ;
+        grid-auto-rows: 450px;
+        gap: 30px;
+        }
+
+    @include ExtraLarge {
+        
+    display: grid;
+    grid-template-columns:repeat(2,1fr) ;
+    grid-auto-rows: 450px;
+    gap: 30px;
+    }
+
+
+
+        
+
+    
+
         li {
         display: inline-block;
-        margin: 40px 100px;
-        
+        //margin: 40px 100px;
         color: white;
-        font-size: large;   
+        font-size: large;
+        align-items: center;
+
+        
+        
+       
+
             img {
                 width: 250px;
                // margin: 0 auto;
+               justify-content: center;
+
+               @include small {
+                width: 220px;
+            }
+            
+            
             }
 
             p {
                 background-color: $bg-color-encabezado;
                 font-family: 'Montserrat', sans-serif;
                 text-align: center;
-                width: 300px;
+                font-size: 18px;
+                width: 200px;
                 height: 50px;
-                margin-top: 20px ;
+                
+                margin: 20px auto;
+
+                
             }
 
             
