--- a/scss/components/_seccionTresNosotros.scss
+++ b/scss/components/_seccionTresNosotros.scss
@@ -1,6 +1,27 @@
 @import '../base/variables';
 
 .galeriaNosotros {
+    text-align: center;
+    margin: 0 40px 40px ;
+
+    @include small {
+        margin: 0 50px 20px ;
+    }
+    
+    @include Medium {
+        margin: 0 50px 20px ;
+    }
+
+    @include Large {
+        margin: 0 30px 20px ;
+    }
+
+    @include ExtraLarge {
+        margin: 0 30px 20px ;
+    }
+    
+    
+
 
     h2 {
     color: rgb(43, 197, 197);
@@ -9,20 +30,88 @@
     padding: 3vh 3vw;
     text-align: center;
 
+    @include small {
+        font-size: 20px;
+        padding: 10px 0 2px 0;
+
     }
 
-    div {
-        display: flex;
-        justify-content: center;
-        margin: 20px 20px;
+    @include Medium {
+        font-size: 30px;
+        padding: 10px 0 2px 0;
+    }
 
-        img {
-            width: 400px;
-            display: flex;
-            flex-direction: row;
+    }
+
+    .galeria {
+        display: grid;
+        grid-template-columns:repeat(3,1fr) ;
+        grid-auto-rows: 300px;
+        gap: 30px;
+
+        @include small {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-auto-rows: 220px ;
+            margin-top: 20px;
+        }
+
+        @include Medium {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-auto-rows: 300px ;
+            margin-top: 20px;
+        }
+
+        @include Large {
+            display: grid;
+            grid-template-columns: repeat(2,1fr);
+            grid-auto-rows: 240px ;
+            margin-top: 20px;
+        }
+
+        @include ExtraLarge {
+            display: grid;
+            grid-template-columns: repeat(2,1fr);
+            grid-auto-rows: 300px ;
+            margin-top: 20px;
+        }
+        
+
+        .galeriaItem {
+
+
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                -webkit-box-shadow: 16px 14px 10px -2px rgba(0,0,0,0.25);
+-moz-box-shadow: 16px 14px 10px -2px rgba(0,0,0,0.25);
+box-shadow: 16px 14px 10px -2px rgba(0,0,0,0.25);
+
+            }
+
+
 
         }
+       
+
+        
+
+
+    
+    
 
     }
 }
+
+
+
+
+
+
+
+
+
 
