--- a/scss/components/_seccionTresTratamientos.scss
+++ b/scss/components/_seccionTresTratamientos.scss
@@ -3,18 +3,18 @@
 .seccionTresTratamientos {
     background-color: white;
     text-align: center;
-    height: 90vh;
+    height: 100%;
     margin-top: 30px;
-    h1 {
-        padding: 20px 0 2px 0;
-        color: white;
-        font-size:$font-size-titulo;
-        font-family: $font-family;
 
-    }
+    ul {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        margin: 20px 20px;
+
     li {
-        //display: flex;
-        //margin: 20px auto;
+        
 
         h2 {
             background-color:rgb(250, 166, 117);    
@@ -27,30 +27,89 @@
             font-size: $font-size-sub-titulo;
             font-family: $font-family;
 
+            @include small {
+                text-align: center;
+                padding: 0;
+                font-size: 22px;
+            }
+
+            @include Medium {
+                text-align: center;
+                padding: 0;
+                font-size: 24px;
+            }
+
+            @include Large {
+                font-size: 26px;
+            }
+
         }
 
         div {
             display: flex;
+            justify-content: space-evenly;
+
+            @include small {
+                display: flex;
+                flex-direction: column-reverse;
+                align-items: center;
+            }
             
+            @include Medium {
+                display: flex;
+                flex-direction: column-reverse;
+                align-items: center;
+            }
 
             p {
             
                 width: 60%;
-                margin: 50px 200px 0 ;
+                margin: 50px 0 20px;
                 color: black;
                 font-size: 25px;
                 font-family: $font-family;
                 text-align: justify;
+
+                @include small {
+                    font-size: 18px;
+                    width: 70%;
+                    margin: 10px;
+                    margin-bottom: 40px;
+    
+                }
+
+                @include Medium {
+                    font-size: 20px;
+                    width: 70%;
+                    margin-bottom: 40px;
+    
+                }
+    
+                @include Large {
+                    font-size: 20px;
+                }
+    
+                @include ExtraLarge {
+                    font-size: 22px;
+                }
     
                 }
 
             img {
                 width: 180px;
                 margin: 20px 50px;
+
+                @include Medium {
+                    width: 220px;
+                }
+
+                @include Large {
+                    width: 160px;
+                }
                 
             }
 
-    
+        }
     }
 
 
