--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,3 +14,4 @@
 @import '../scss/components/seccionDosContacto';
 @import '../scss/components/seccionDosFaq';
 @import '../scss/components/seccionTresFaq.scss';
+@import '../scss/breakpoints/breakpoints.scss';
