--- a/css/style.css
+++ b/css/style.css
@@ -791,7 +791,7 @@ h2 {
 }
 
 .portadaFaq {
-  background-image: url(./../assets/img/carrusel-faq-03.jpg);
+  background-image: url(./../assets/img/carrusel-faq-03.webp);
   height: 75vh;
   background-size: cover;
   background-position: center;
