--- a/scss/components/_portadaPages.scss
+++ b/scss/components/_portadaPages.scss
@@ -153,7 +153,7 @@
 
 
 .portadaFaq {
-    background-image: url(./../assets/img/carrusel-faq-03.jpg);
+    background-image: url(./../assets/img/carrusel-faq-03.webp);
     height: 75vh;
     background-size: cover;
     background-position: center;
