--- a/scss/components/_portadaPages.scss
+++ b/scss/components/_portadaPages.scss
@@ -30,6 +30,7 @@
         color: white;
         font-size: 100px;
         margin: 20px 0 ;
+        text-align: center;
 
         @include small {
             font-size: 35px;
@@ -62,6 +63,7 @@
         h2 {
             font-size: 20px;
             margin: 20px 0 ;
+            text-align: center;
 
             @include small {
                 font-size: 15px;
@@ -104,6 +106,7 @@
         color: white;
         font-size: 100px;
         margin: 20px 0 ;
+        text-align: center;
         
 
         @include small {
@@ -178,10 +181,12 @@
         color: white;
         font-size: 100px;
         margin: 20px 0 ;
+        text-align: center;
 
         @include small {
             font-size: 35px;
             margin: 10px auto;
+            
 
         }
 
@@ -213,6 +218,7 @@
         h2 {
             font-size: 20px;
             margin: 20px 0 ;
+            text-align: center;
 
             @include small {
                 font-size: 15px;
@@ -258,6 +264,7 @@
         color: white;
         font-size: 100px;
         margin: 20px 0 ;
+        text-align: center;
 
         @include small {
             font-size: 35px;
@@ -286,6 +293,7 @@
         h2 {
             font-size: 20px;
             margin: 20px 0 ;
+            text-align: center;
 
             @include small {
                 font-size: 15px;
