--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-bottom: 10px;
     //position: absolute;
     @include small {
         display: flex;
@@ -38,6 +39,13 @@
         .encabezadoLogo {
         width: 180px;
         margin: 10px;
+        border-radius: 50%;
+
+        &:hover {
+            transition-property: all 1s;
+            background-color: rgb(238, 163, 119);
+            
+        } 
         
         @include small {
         
@@ -69,11 +77,24 @@
             
                 padding: 3vh 3.5vw;
                 justify-content: center;
+                border-radius: 6px;
+
+                    &:hover {
+                        transition-property: all 1s;
+                        background-color: rgb(238, 163, 119);
+                        
+                    }
 
                     a{
                     color: black;
                     font-size: $font-size-nav;
                     font-family: 'Montserrat', sans-serif ;
+
+                        &:hover {
+                            color: white;
+                        }
+
+
                     @include small{
                         font-size: 12px;
                     
@@ -97,11 +118,4 @@
 
 
 
-  /*  @media (max-width: 450px) {
-        .encabezado {
-            background-color: red;
-          
-            
-        
-        }
-    } */
+ 
